--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -2,13 +2,4 @@
   span h1 {
     font-size: 150%;
   }
-  paper-shadow {
-    margin-left: .1em;
-  }
-}
-
-@media (max-width: 750px) {
-  core-scaffold::shadow core-header-panel::shadow div#mainContainer {
-    padding-right: 1.5em;
-  }
 }
