--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -42,3 +42,6 @@ span h1 {
 core-toolbar h3 {
   color: $secondary;
 }
+core-icon {
+  color: white;
+}
